# transformers

./: .gitignore  README.md  analysis.ipynb  main.py  pyproject.toml  results_bleu.txt  setup.py
config/: config.yaml
experiments/: base_total_time.txt  flash_attention_total_time.txt  flashattention.ipynb
modelling/embedding/: embedding.py  mytokenizer.py
src/modelling/: functional.py
src/modelling/embedding/: positional_encoding.py
src/modelling/layers/: attention.py  feedforward.py
src/modelling/model/: decoder.py  encoder.py  model_embedding.py  transformer.py
src/run/: trainer.py
src/utils/: batch_sampler.py  dataset.py  learning_rate.py  mytokenizer.py
tests/: practical_4_test.py  practical_5_encoder_layer_test.py  practical_5_mha_test.py  practical_6_test.py
