[project]
name = "transformer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [
    { include = "modelling", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
