[project]
name = "transforemer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
